[metadata]
name = openseestools
version = 0.3.0
description = Extensions to OpenSeesPy.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Peter Talley
author_email = ptalley2@vols.utk.edu
url = https://github.com/otaithleigh/OpenSeesTools
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.7
install_requires =
    attrs
    matplotlib
    numpy
    pandas>=1.0
    tabulate
package_dir =
    =src
packages =
    openseestools
